--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "PM2 logging to Graylog using gelf-pro",
   "main": "app.js",
   "dependencies": {
-    "gelf-pro": "~1.2",
-    "pm2": "^2.0.18",
+    "gelf-pro": "^1.3.6",
+    "pm2": "^5.1.2",
     "pmx": "latest"
   },
   "repository": {
@@ -20,8 +20,8 @@
   "author": "Seth Black <sblack@sethserver.com>",
   "license": "Apache 2",
   "devDependencies": {
-    "eslint": "^5.4.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0"
+    "eslint": "^8.7.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.0"
   }
 }
